avance sobre CSS para la pagina de menup.html, falta arreglar los botones se implemto caracteristicas genericas para q funcionen para cualquier producto asociado

--- a/styles/style.css
+++ b/styles/style.css
@@ -397,7 +397,7 @@ p{
     margin-top:880px;/**/
     position:absolute;
     z-index:1;
-    background-color: green;
+   /* background-color: green;/**/
 }
 .conos{
     display:inline-block;	
@@ -407,7 +407,7 @@ p{
     opacity: .40;	
     height: 504px;
     width: 449px;
-    background-color: blue;
+   /* background-color: blue;/**/
 }
 #conoizq{	
     background-image:url(../img/generales/fondo1.png);
@@ -603,7 +603,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b2423', end
     border-color:rgb(255,255,255);
     border-style:ridge;
 	border-width: 3px;
-	height:43px;
+	
 	width:622px;
 	margin-left:80px;
 	margin-top:17px;
@@ -611,26 +611,27 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b2423', end
 
 #baropc ul{
 	
-	
+	height:43px;
 	position:relative;/**/
+	
 }
 
 
-#baropc li{
+#baropc ul li{
 	display:inline-block;
 	/*margin:0 30px;*/
 	font-family:Helvetica;
 	font-size:18px;
 	font-weight:bolder;   
     min-width:150px;
-    min-height:100px;
+    height:43px;
 	margin:0 auto;
 	vertical-align:top;
 	padding-top:7px;/**/
 	text-align:center;
 	
 }
-#baropc li:hover{
+#baropc ul li:hover{
 	 color:rgb(255,255,255);
 	 text-decoration: underline;
    /* padding:20px 0;/**/
@@ -640,15 +641,46 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b2423', end
     text-shadow: -1px 0 black, 0 2px black, 2px 0 black, 5px -1px black;
     filter: Shadow(Color=black, Direction=130, Strength=3); /* IE Proprietary Filter*/
 	
+	height:40px;
+	
 }
 #baropc ul .divisor{
-   height: 42px;
-   width: 1px;
-   background-color: #DDD;
-   border-right: 2px solid #FFF;
-   display:inline-block;
-   margin:0 auto;
-   margin-left:-5px;
-position:relative;/**/
-   
+   	height: 42px;
+   	width: 1px;
+   	background-color: #DDD;
+   	border-right: 2px solid #FFF;
+   	display:inline-block;
+   	margin:0 auto;
+   	margin-left:-5px;
+	position:relative;/**/
+}
+div #prodcont{
+	/*background-color:#963;*/
+	height:345px;	
+}
+div #fotoclasico{
+	margin:0 auto;
+	border-color:rgb(153,153,153);
+	/*background-color:#60F;/**/
+	background-image:url(../img/fotoscentro/clasico1.png);	/**/
+	background-repeat:no-repeat;/**/
+	height:305px;
+	width:555px;
+	/*margin-top:30px;
+	/*left:40px;/**media en mockups =36 -> para redondear*/
+	text-align:left;
+	/*position:relative;/**/
+}
+div #descprod{
+	font-family:Helvetica;
+	font-size:16px;
+	color:rgb(255,255,255);
+	font-weight:bolder;
+	height:120px;
+	width:320px;
+	position:relative;
+	text-align:justify;
+	padding-left:50px;
+	/*z-index:5;*/
+	margin-top:-40px;/*	*/
 }
