--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,338 @@ a:link,a:hover,a:visited,a:active {
     color: rgb(255,255,255);
 }
 
-/*****************************SESIÒN************************************/
+/*****************************REGISTRO************************************/
+
+#registrate{
+	position: absolute;
+	z-index: 1;
+	width: 650px;
+	height: 600px;
+	background-color: #FFFFFF;
+	margin-top: 70px;
+	border-bottom-left-radius: 12px;
+	border-bottom-right-radius: 12px;
+	border-top-left-radius: 12px;
+	border-top-right-radius: 12px;
+}
+
+#registrate p{
+	position: absolute;
+	font-family: Helvetica;
+	font-size: 14px;
+	font-weight: bold;
+	color: #A31E1A;
+	margin-left: 310px;
+	margin-top: 512px;
+	z-index: -1;
+}
+
+#checkbox{
+	height: 20px;
+    width: 20px;
+    margin-left: 24px;
+    margin-top: 95px;
+    z-index: 1;
+}
+
+#imag{
+	background-image: url(../img/generales/Logo.png);/**/
+    background-repeat: no-repeat;
+    height: 210px;
+    width: 210px;
+    margin-left: 40px;
+    margin-top: 140px;
+}
+
+div#imag p{
+	font-family: Helvetica;
+	font-size: 36px;
+	color:rgb(101,200,232);
+	margin-left: 20px;
+    margin-top: 90px;
+    -moz-text-shadow: 2px 1px 1px rgba(255,255,255,1);/*.5 es 50% de opacidad*/
+    -o-text-shadow: 2px 1px 1px rgba(255,255,255,1);/*.5 es 50% de opacidad*/
+    -webkit-text-shadow: 2px 1px 1px rgba(255,255,255,1);/*.5 es 50% de opacidad*/
+    text-shadow: -1px -1px black, 0px 2px black, 1px -1px black, 3px 2px black;
+}
+
+#W{
+    width: 210px;
+    margin-left: 40px;
+    margin-top: 20px;
+    font-family: Helvetica;
+	font-size: 38px;
+	font-weight: bold;
+	color:rgb(101,200,232);
+    -moz-text-shadow: 2px 1px 1px rgba(255,255,255,1);/*.5 es 50% de opacidad*/
+    -o-text-shadow: 2px 1px 1px rgba(255,255,255,1);/*.5 es 50% de opacidad*/
+    -webkit-text-shadow: 2px 1px 1px rgba(255,255,255,1);/*.5 es 50% de opacidad*/
+    text-shadow: -1px -1px black, 0px 2px black, 1px -1px black, 3px 2px black;
+}
+
+.reg1{
+	position: absolute;
+	width: 270px;
+	height: 35px;
+	margin-left: 315px;
+	margin-top: 20px;
+	padding-left: 5px;
+	background-color: #ffffff;
+	border: 2px solid;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-color: black;
+	resize: none;
+	
+	color: #a0a0a0;
+	font-family: Helvetica;
+	font-size: 18px;
+	font-weight: bold;
+	text-align: left;
+	padding-top: 8px;
+}
+
+.reg2{
+	position: absolute;
+	width: 270px;
+	height: 35px;
+	margin-left: 315px;
+	margin-top: 70px;
+	padding-left: 5px;
+	background-color: #ffffff;
+	border: 2px solid;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-color: black;
+	resize: none;
+	
+	color: #a0a0a0;
+	font-family: Helvetica;
+	font-size: 18px;
+	font-weight: bold;
+	text-align: left;
+	padding-top: 8px;
+}
+
+.reg3{
+	position: absolute;
+	width: 270px;
+	height: 35px;
+	margin-left: 315px;
+	margin-top: 120px;
+	padding-left: 5px;
+	background-color: #ffffff;
+	border: 2px solid;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-color: black;
+	resize: none;
+	
+	color: #a0a0a0;
+	font-family: Helvetica;
+	font-size: 18px;
+	font-weight: bold;
+	text-align: left;
+	padding-top: 8px;
+}
+
+.reg4{
+	position: absolute;
+	width: 270px;
+	height: 35px;
+	margin-left: 315px;
+	margin-top: 170px;
+	padding-left: 5px;
+	background-color: #ffffff;
+	border: 2px solid;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-color: black;
+	resize: none;
+	
+	color: #a0a0a0;
+	font-family: Helvetica;
+	font-size: 18px;
+	font-weight: bold;
+	text-align: left;
+	padding-top: 8px;
+}
+
+.reg5{
+	position: absolute;
+	width: 270px;
+	height: 35px;
+	margin-left: 315px;
+	margin-top: 220px;
+	padding-left: 5px;
+	background-color: #ffffff;
+	border: 2px solid;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-color: black;
+	resize: none;
+	
+	color: #a0a0a0;
+	font-family: Helvetica;
+	font-size: 18px;
+	font-weight: bold;
+	text-align: left;
+	padding-top: 8px;
+}
+
+.reg6{
+	position: absolute;
+	width: 270px;
+	height: 75px;
+	margin-left: 315px;
+	margin-top: 270px;
+	padding-left: 5px;
+	background-color: #ffffff;
+	border: 2px solid;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-color: black;
+	resize: none;
+	
+	color: #a0a0a0;
+	font-family: Helvetica;
+	font-size: 18px;
+	font-weight: bold;
+	text-align: left;
+	padding-top: 8px;
+}
+
+.reg7{
+	position: absolute;
+	width: 270px;
+	height: 35px;
+	margin-left: 315px;
+	margin-top: 360px;
+	padding-left: 5px;
+	background-color: #ffffff;
+	border: 2px solid;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-color: black;
+	resize: none;
+	
+	color: #a0a0a0;
+	font-family: Helvetica;
+	font-size: 18px;
+	font-weight: bold;
+	text-align: left;
+	padding-top: 8px;
+}
+
+.reg8{
+	position: absolute;
+	width: 270px;
+	height: 35px;
+	margin-left: 315px;
+	margin-top: 410px;
+	padding-left: 5px;
+	background-color: #ffffff;
+	border: 2px solid;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-color: black;
+	resize: none;
+	
+	color: #a0a0a0;
+	font-family: Helvetica;
+	font-size: 18px;
+	font-weight: bold;
+	text-align: left;
+	padding-top: 8px;
+}
+
+.reg9{
+	position: absolute;
+	width: 270px;
+	height: 35px;
+	margin-left: 315px;
+	margin-top: 460px;
+	padding-left: 5px;
+	background-color: #ffffff;
+	border: 2px solid;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-color: black;
+	resize: none;
+	
+	color: #a0a0a0;
+	font-family: Helvetica;
+	font-size: 18px;
+	font-weight: bold;
+	text-align: left;
+	padding-top: 8px;
+}
+
+#X{
+	position: absolute;
+	background-color: #d39a5a;
+    border: 1px solid;
+    border-color: black;
+    border-bottom-left-radius: 12px;
+	border-bottom-right-radius: 12px;
+	border-top-left-radius: 12px;
+	border-top-right-radius: 12px;
+    box-shadow: 2px 2px 4px #000000;	
+    color: white;	
+    font-family: "snap";
+    font-size: 14px;
+    height: 22px;
+    width: 24px;
+    margin-left: 620px;
+    margin-top: 2px;
+    padding-top: 2px;
+    cursor: pointer;
+}
+
+#X:hover{
+    color: black;
+}
+
+#ready{
+	position: absolute;
+	background-color: #d39a5a;
+    border: 1px solid;
+    border-color: black;
+    border-bottom-left-radius: 12px;
+	border-bottom-right-radius: 12px;
+	border-top-left-radius: 12px;
+	border-top-right-radius: 12px;
+    box-shadow: 2px 2px 4px #000000;	
+    color: white;	
+    font-family: "snap";
+    font-size: 18px;
+	padding-top: 8px;
+    height: 35px;
+    width: 170px;
+    margin-left: 422px;
+    margin-top: 535px;
+    cursor: pointer;
+}
+
+/*****************************SESIÓN************************************/
 
 #sesion{
 	position: absolute;
@@ -84,6 +415,16 @@ div#btnpedido2:hover{
 	cursor: pointer;
 }
 
+.triangulo{
+	width: 0;
+    height: 0;
+    border-left: 30px solid transparent;  /* left arrow slant */
+    border-right: 30px solid transparent; /* right arrow slant */
+    border-bottom: 30px solid #ffffff; /* bottom, add background color here */
+    margin-top: -30px;
+	margin-left: 190px;
+}
+
 #cuadro{
 	position: absolute;
 	margin: auto top;
@@ -97,7 +438,7 @@ div#btnpedido2:hover{
 	width: 300px;
 	height: 280px;
 	background-color: #FFFFFF;
-	margin-top: 100px;
+	margin-top: 110px;
 	margin-left: 830px;
 }
 
@@ -107,8 +448,8 @@ div#btnpedido2:hover{
 	font-size: 14px;
 	font-weight: bold;
 	color: #A31E1A;
-	margin-left: -30px;
-	margin-top: 135px;
+	margin-left: -25px;
+	margin-top: 145px;
 }
 
 #usuario{
@@ -116,18 +457,21 @@ div#btnpedido2:hover{
 	width: 270px;
 	height: 35px;
 	margin-left: 11px;
-	margin-top: 15px;
+	margin-top: 20px;
 	padding-left: 5px;
-	background-color: #a4a4a4;
+	background-color: #ffffff;
 	border: 2px solid;
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
+	border-color: black;
 	resize: none;
 	
+	color: #a0a0a0;
 	font-family: Helvetica;
 	font-size: 18px;
+	font-weight: bold;
 	text-align: left;
 	padding-top: 8px;
 }
@@ -137,18 +481,21 @@ div#btnpedido2:hover{
 	width: 270px;
 	height: 35px;
 	margin-left: 11px;
-	margin-top: 75px;
+	margin-top: 85px;
 	padding-left: 5px;
-	background-color: #a4a4a4;
+	background-color: #ffffff;
 	border: 2px solid;
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
+	border-color: black;
 	resize: none;
 	
+	color: #a0a0a0;
 	font-family: Helvetica;
 	font-size: 18px;
+	font-weight: bold;
 	text-align: left;
 	padding-top: 8px;	
 }
@@ -170,27 +517,31 @@ div#btnpedido2:hover{
     height: 35px;
     width: 170px;
     margin-left: 110px;
-    margin-top: 175px;	
+    margin-top: 175px;
+    cursor: pointer;
 }
 
 #registro{
 	position: absolute;
-	margin-top: 235px;
+	margin-top: 240px;
 	width: 300px;
 	height: 30px;
 	background-color: #C6A3B2;
 }
 
 #registro p{
+	width: 150px;
+	height: 18px;
 	margin-left: 70px;
-	margin-top: 6px;
+	margin-top: 5px;
 	color: #A31E1A;
 	font-family: Helvetica;
+	cursor: pointer;
 }
 
 
-
 /*****************************FONDO DE LA PAGINA************************/
+
 body {
     background-color: rgb(163,30,26);/**/
     background-image: url(../img/generales/fondo.png);
@@ -199,6 +550,7 @@ body {
 }
 
 /****************************CABECERA DE LA PAGINA*********************************/
+
 header{	
     margin-top: 22px;
     height: 350px;
@@ -213,6 +565,7 @@ header{
     width: 255px;	
     margin-top: 100px;
     margin-left: -25px;
+    cursor: pointer;
 }
 
 #opcsup{
@@ -316,7 +669,6 @@ header{
 
 
 /*********************************************************************/
-
 
 #eslogan{
     color: white;	
